--- a/seller/templates/seller/sign-in.html
+++ b/seller/templates/seller/sign-in.html
@@ -1,57 +1,91 @@
 ﻿{% extends "seller/base.html" %}
 {% load static %}
+
 {% block content %}
 <div class="authentication">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-sm-12">
-                <form class="card auth_form">
+                <form method="POST" action="{% url 'signin' %}" class="card auth_form">
+                    {% csrf_token %}
+
                     <div class="header">
-                        <img class="logo" src="assets/images/logo.svg" alt="">
-                        <h5>Log in</h5>
+                        <img class="logo" src="{% static 'assets/images/logo.svg' %}" alt="">
+                        <h5>Seller Login</h5>
                     </div>
+
                     <div class="body">
+
+                        <!-- Django Messages -->
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-{{ message.tags }}">
+                                    {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+                        <!-- Phone Number -->
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Username">
+                            <input type="text"
+                                   name="phone"
+                                   class="form-control"
+                                   placeholder="Phone Number"
+                                   required>
                             <div class="input-group-append">
-                                <span class="input-group-text"><i class="zmdi zmdi-account-circle"></i></span>
+                                <span class="input-group-text">
+                                    <i class="zmdi zmdi-phone"></i>
+                                </span>
                             </div>
                         </div>
+
+                        <!-- Password -->
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Password">
+                            <input type="password"
+                                   name="password"
+                                   class="form-control"
+                                   placeholder="Password"
+                                   required>
                             <div class="input-group-append">
-                                <span class="input-group-text"><a href="forgot-password.html" class="forgot"
-                                        title="Forgot Password"><i class="zmdi zmdi-lock"></i></a></span>
+                                <span class="input-group-text">
+                                    <i class="zmdi zmdi-lock"></i>
+                                </span>
                             </div>
                         </div>
+
                         <div class="checkbox">
                             <input id="remember_me" type="checkbox">
                             <label for="remember_me">Remember Me</label>
                         </div>
-                        <a href="index.html" class="btn btn-primary btn-block waves-effect waves-light">SIGN IN</a>
-                        <div class="signin_with mt-3">
-                            <p class="mb-0">or Sign Up using</p>
-                            <button class="btn btn-primary btn-icon btn-icon-mini btn-round facebook"><i
-                                    class="zmdi zmdi-facebook"></i></button>
-                            <button class="btn btn-primary btn-icon btn-icon-mini btn-round twitter"><i
-                                    class="zmdi zmdi-twitter"></i></button>
-                            <button class="btn btn-primary btn-icon btn-icon-mini btn-round google"><i
-                                    class="zmdi zmdi-google-plus"></i></button>
+
+                        <button type="submit"
+                                class="btn btn-primary btn-block waves-effect waves-light" >
+                            SIGN IN
+                        </button>
+
+                        <div class="text-center mt-3">
+                            <a href="#" class="forgot">
+                                Forgot Password?
+                            </a>
                         </div>
+
                     </div>
                 </form>
+
                 <div class="copyright text-center">
                     &copy;
-                    <script>document.write(new Date().getFullYear())</script>,
-                    <span><a href="templatespoint.net">Templates Point</a></span>
+                    <script>document.write(new Date().getFullYear())</script>
+                    <span>Your Company</span>
                 </div>
             </div>
+
             <div class="col-lg-8 col-sm-12">
                 <div class="card">
-                    <img src="assets/images/signin.svg" alt="Sign In" />
+                    <img src="{% static 'assets/images/signin.svg' %}" alt="Sign In">
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
